Partial cleanup in ejb-container
- generics, stringbuffers, formatting, cycles